--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,20 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff375"
+    android:background="#6795d1"
     tools:context="com.code_blooded.mrithyu_care.afterdeathcare.Main2Activity">
 
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#000000"
-        android:text="After Death Care"
-        android:textColor="#ffffff"
-        android:paddingTop="10dp"
-        android:paddingLeft="15dp"
-        android:textSize="20dp"
-        />
 
     <ImageView
         android:id="@+id/logo"
@@ -26,17 +15,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_gravity="center"
-        android:layout_marginBottom="291dp"
+        android:layout_marginBottom="41dp"
         android:src="@mipmap/logo" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="182dp"
-        android:src="@mipmap/arrow_left"
-        android:id="@+id/arrow_left"/>
 
 
 </RelativeLayout>
